[2단계 - 로또(수동)] 헌치(박지우) 미션 제출합니다. (#480)
* docs: 기능구현목록 추가

* feat: 로또 구입 금액 입력 추가

* feat: 로또 구입 금액 검증 로직 추가

* feat: 로또 당첨 번호 기능 추가

* docs: 진행사항 표시

* feat: 보너스 볼 입력 기능 추가

* feat: 로또 숫자 객체 구현

* feat: 상수 클래스 생성

* feat: 로또 객체 구현

* feat: 당첨로또 객체 구현

* feat(MainController): 구현할 기능 주석처리

* feat: Application 생성

* docs: 진행사항 표시

* style: 포맷팅에 맞게 정렬

* test: @SuppressWarnings("NonAsciiCharacters") 추가

* feat(Money): 돈 객체 기능 생성

* feat(LottoNumberGenerator): `Collections.shuffle()`을 활용해 로또 생성

* feat: getter 추가

* test(InputViewTest): 메서드 추가

* feat: 로또 티켓 생성/출력 기능 추가

* feat: 도메인과 검증로직 연결

* feat: 인풋 검증 클래스 구현

* feat: 보너스번호 일치여부 확인 메소드 추가

* feat: 보너스번호 일치여부 확인 메소드 추가

* feat(Rank): Enum 기능 추가

* style: 코드 리포맷

* feat: 결과 기능 구현

* feat(Rank): 로직 변경

* feat: getter 추가

* feat: 결과 출력 기능 구현

* feat(InputView): 검증 로직 추가

* feat(Money): getter 추가

* feat: 수익률 계산, 출력 기능 추가

* refactor: 상수화 구현 추가

* refactor: Lotto 로직 변경

* refactor: LottoBall을 cache 저장하도록 로직 변경

* style: 코드 리포맷

* docs: 진행사항 표시

* style: 코드 리포맷

* refactor: 메소드/변수/상수/클래스 명명 및 위치 변경

* refactor: LottoRandomGenerator 제거, LottoFactory 생성

* refactor: 로또 공 캐시를 map으로 변환

* refactor(Lotto): Collections.sort() 사용

* refactor: System.lineSeparator() 추가

* refactor: 변수에 final 추가

* refactor: LottoBall을 LottoNumber로 이름 수정

* refactor: 예외처리 로직을 사용처 안으로 이동

* refactor: WinLotto 삭제, WinNumbers 클래스 생성

* refactor: Constants 클래스 제거 및 상수 이동

* refactor(NumbersGenerator): 숫자 리스트 반환 클래스 생성

* test(NumbersGenerator): 로또 숫자 범위, 개수 반환 여부 테스트 코드 추가

* refactor(Result): 로직 변경-add 대신 생성자 안에서 반복문 실행

* refactor(Controller): 검증이 필요한 로직을 도메인으로 이동

* fix(Lotto): 접근제한자 private로 변경

* feat(LottoTicketCount): 수동로또 개수 입력/저장 기능 추가

* feat: 수동 로또 숫자 입력/저장 기능 추가

* refactor: 구매한 로또내역 출력 시 이전에 구매한 수동 로또번호를 포함하도록 수정

* refactor: Money를 LottoMoney로 네이밍

* refactor: 생성자 private, 정적 팩토리 메소드 사용

* refactor: 검증 로직을 생성자 안으로 이동

*